--- a/style.css
+++ b/style.css
@@ -38,6 +38,6 @@ body {
     font-size: 24px; /* Större text för klockan */
 }
 
-.event, .countdown {
+.event, .countdown, .overnext {
     font-weight: bold; /* Fetstil för aktuellt och kommande pass */
 }
