--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
     border: 1px solid #ddd;
     padding: 10px;
     background-color: #f9f9f9;
+    font-size: 1.5em;
 }
 
 /*.info-box, .rooms h3, .clock, .event, .countdown, .overnext {
