--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     border: 1px solid #ddd;
     padding: 10px;
     background-color: #f9f9f9;
-    font-size: 1.5em;
+    font-size: calc(2vw + 2vh + 1vmin);
 }
 
 /*.info-box, .rooms h3, .clock, .event, .countdown, .overnext {
